--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </head>
 
 <body>
-    <!-- <header>
+    <header>
         <nav class="navbar navbar-expand-lg">
             <div class="container">
                 <a class="navbar-brand" href="#">Navbar</a>
@@ -66,7 +66,7 @@
                 </div>
             </div>
         </nav>
-    </header> -->
+    </header>
 
     <!-- -----------bootstrap cdn s link starts here----------- -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js"
