header section has completed

--- a/index.html
+++ b/index.html
@@ -11,54 +11,57 @@
     <!-- ---------------bootstrap style cdn link--------------- -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
+    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
-        crossorigin="anonymous"></script>
+        crossorigin="anonymous"></script> -->
     <!-- ---------------bootstrap style cdn link ends here--------------- -->
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <header>
+        <!-- ------------Navbar starts here--------- -->
         <nav class="navbar navbar-expand-lg">
             <div class="container">
-                <a class="navbar-brand" href="#">Navbar</a>
+                <a class="navbar-brand mt-2" href="#">
+                    <img src="images/logo.png" alt="">
+                </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
+                    <ul class="navbar-nav mx-auto mb-2 mt-3 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                            <a class="nav-link text-secondary active" aria-current="page" href="#">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Recipes</a>
+                            <a class="nav-link text-dark text text-hover" href="#">Recipes</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Blog</a>
+                            <a class="nav-link text-dark" href="#">Blog</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Contact</a>
+                            <a class="nav-link text-dark" href="#">Contact</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">About Us</a>
+                            <a class="nav-link text-dark" href="#">About Us</a>
                         </li>
                     </ul>
-                    <ul class="navbar-nav">
+                    <ul class="navbar-nav mt-3">
                         <li class="nav-item me-3">
-                            <a href="#" class="nav-link">
+                            <a href="#" class="nav-link text-dark">
                                 <i class="fa-brands fa-facebook-f"></i>
                             </a>
                         </li>
                         <li class="nav-item me-3">
-                            <a href="#" class="nav-link">
+                            <a href="#" class="nav-link text-dark">
                                 <i class="fa-brands fa-twitter"></i>
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a href="#" class="nav-link">
+                            <a href="#" class="nav-link text-dark">
                                 <i class="fa-brands fa-instagram"></i>
                             </a>
                         </li>
@@ -66,6 +69,60 @@
                 </div>
             </div>
         </nav>
+        <hr>
+        <!-- ------------Navbar ends here--------- -->
+
+        <!-- ---------------Header content area starts here------------- -->
+        <section>
+            <div class="container py-5">
+                <div class="row">
+                    <div class="col-md-6 header-text d-flex justify-content-center pe-0">
+                        <div>
+                            <div class="fw-semibold px-3 py-2 mt-5 my-3 rounded-pill top-left-badge">
+                                <img class="me-2" src="images/book.png" alt="">
+                                <span class="">Hot Recipes</span>
+                            </div>
+                            <h1 class="py-3">Spicy delicious <br> chicken wings</h1>
+                            <p>The chicken recipe will be so delicious. <br>And there are many recipies available in our restaurant</p>
+                            <div class="d-flex">
+                                <div class="px-3 py-1 me-4 rounded-pill header-btn">
+                                    <img class="" src="images/Timer.png" alt="">
+                                    <span>30 Minutes</span>
+                                </div>
+                                <div class="px-3 py-1 me-4 rounded-pill header-btn">
+                                    <img src="images/ForkKnife.png" alt="">
+                                    <span>Chicken</span>
+                                </div>
+                            </div>
+                            <div class="d-flex justify-content-between pt-5 my-5">
+                                <div class="d-flex">
+                                    <div class="me-3">
+                                        <img src="images/profile.png" alt="">
+                                    </div>
+                                    <div>
+                                        <h5 class="mb-0">John Smith</h5>
+                                        <p class="text-secondary">15 March 2022</p>
+                                    </div>
+                                </div>
+                                <div class="">
+                                    <a class="btn btn-dark px-4 py-3" href="#">
+                                        View Recipes
+                                        <i class="fa-solid fa-circle-play"></i>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6 ps-0 header-left-bg">
+                        <div class="position-absolute mt-5 top-right-badge">
+                            <img src="images/Badge.png" alt="">
+                        </div>
+                        <img class="header-image" src="images/baked-chicken-wings-asian-style-tomatoes-sauce-plate 1.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- ---------------Header content area ends here--------------- -->
     </header>
 
     <!-- -----------bootstrap cdn s link starts here----------- -->
