categories section has been added

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 </head>
 
 <body>
+    <!-- ------------Header section starts here------------ -->
     <header>
         <!-- ------------Navbar starts here--------- -->
         <nav class="navbar navbar-expand-lg">
@@ -117,13 +118,54 @@
                         <div class="position-absolute mt-5 top-right-badge">
                             <img src="images/Badge.png" alt="">
                         </div>
-                        <img class="header-image" src="images/baked-chicken-wings-asian-style-tomatoes-sauce-plate 1.png" alt="">
+                        <img class="header-image" src="images/header-banner.png" alt="">
                     </div>
                 </div>
             </div>
         </section>
         <!-- ---------------Header content area ends here--------------- -->
     </header>
+    <!-- ------------Header section ends here------------ -->
+
+    <!-- --------------Main section starts here------------- -->
+    <main class="container">
+        <!-- --------------Categories section starts here------------- -->
+        <section class="d-flex justify-content-between">
+            <h2 class="mt-0">Categories</h2>
+            <a class="mt-1 py-2 px-3 rounded text-decoration-none text-dark fw-semibold categories">View All Categories</a>
+        </section>
+        <section class="py-5 my-5 d-flex justify-content-between flex-wrap">
+            <div class="rounded-5 px-4 breakfast">
+                <img src="images/categories/breakfast.png" alt="">
+                <h6 class="mt-5 ps-3">Breakfast</h6>
+            </div>
+            <div class="rounded-5 vegan">
+                <img class="ps-3" src="images/categories/vegan.png" alt="">
+                <h6 class="mt-1 ps-5">Vegan</h6>
+            </div>
+            <div class="rounded-5 px-4 meat">
+                <img src="images/categories/meat.png" alt="">
+                <h6 class="mt-5 ps-4">Meat</h6>
+            </div>
+            <div class="rounded-5 px-4 dessart">
+                <img src="images/categories/dessart.png" alt="">
+                <h6 class="mt-5 ps-4">Dessart</h6>
+            </div>
+            <div class="rounded-5 px-4 lunch">
+                <img src="images/categories/lunch.png" alt="">
+                <h6 class="mt-5 ps-4">Lunch</h6>
+            </div>
+            <div class="rounded-5 px-4 chocholate">
+                <img src="images/categories/chocholate.png" alt="">
+                <h6 class="mt-5 ps-2">Chocholate</h6>
+            </div>
+        </section>
+        <!-- --------------Categories section starts here------------- -->
+
+        
+    </main>
+    <!-- --------------Main section ends here--------------- -->
+
 
     <!-- -----------bootstrap cdn s link starts here----------- -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js"
