simple recipes section has been added

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
         <!-- --------------Categories section starts here------------- -->
         <section class="d-flex justify-content-between">
             <h2 class="mt-0">Categories</h2>
-            <a class="mt-1 py-2 px-3 rounded text-decoration-none text-dark fw-semibold categories">View All Categories</a>
+            <a class="mt-1 py-2 px-3 rounded text-decoration-none text-dark fw-semibold categories" href="#">View All Categories</a>
         </section>
         <section class="py-5 my-5 d-flex justify-content-between flex-wrap">
             <div class="rounded-5 px-4 breakfast">
@@ -162,7 +162,181 @@
         </section>
         <!-- --------------Categories section starts here------------- -->
 
-        
+        <!-- -----------------Simple and Tasty recipes area starts here---------------- -->
+
+        <section>
+            <h1 class="text-center">Simple and tasty recipes</h1>
+            <p class="text-center fw-normal recipe-text">Here are the our all simple and tasty recipes. You can check it out and taste it. <br>We are providing the best recipes for cheap price.</p>
+
+            <!-- -------------------Card Area starts here----------------- -->
+
+            <section class="my-5">
+                <div class="row row-cols-1 row-cols-md-3 g-4">
+                    <div class="col">
+                      <div class="card h-100 py-3 gradient-bg border-0 rounded-5">
+                        <img class="react-icon" src="images/red-heart.png" alt="">
+                        <img src="images/recepies/burger.png" class="card-img-top p-3" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Big and Juicy Wagyu Beef <br> Cheeseburger</h5>
+                            <div class="d-flex pt-3">
+                                <div class=" py-1 me-4 rounded-pill">
+                                  <img src="images/Timer.png" alt="">
+                                  <span>30 Minutes</span>
+                                </div>
+                                <div class="py-1 me-4 rounded-pill">
+                                  <img src="images/ForkKnife.png" alt="">
+                                  <span>Chicken</span>
+                                </div>
+                            </div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col">
+                      <div class="card h-100 py-3 gradient-bg border-0 rounded-5">
+                        <img class="react-icon" src="images/heart.png" alt="">
+                        <img src="images/recepies/fish.png" class="card-img-top p-3" alt="...">
+                        <div class="card-body">
+                          <h5 class="card-title">Fresh Lime Roasted Salmon with <br> Ginger Sauce</h5>
+                          <div class="d-flex pt-3">
+                            <div class=" py-1 me-4 rounded-pill">
+                              <img src="images/Timer.png" alt="">
+                              <span>30 Minutes</span>
+                            </div>
+                            <div class="py-1 me-4 rounded-pill">
+                              <img src="images/ForkKnife.png" alt="">
+                              <span>Chicken</span>
+                            </div>
+                        </div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col">
+                      <div class="card h-100 py-3 gradient-bg border-0 rounded-5">
+                        <img class="react-icon" src="images/heart.png" alt="">
+                        <img src="images/recepies/strawberry-oatmeal.png" class="card-img-top p-3" alt="...">
+                        <div class="card-body">
+                          <h5 class="card-title">Strawberry Oatmeal Pancake <br> with Honey Syrup</h5>
+                          <div class="d-flex pt-3">
+                            <div class=" py-1 me-4 rounded-pill">
+                                <img src="images/Timer.png" alt="">
+                                <span>30 Minutes</span>
+                            </div>
+                            <div class="py-1 me-4 rounded-pill">
+                                <img src="images/ForkKnife.png" alt="">
+                                <span>Chicken</span>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col">
+                        <div class="card h-100 py-3 gradient-bg border-0 rounded-5">
+                          <img class="react-icon" src="images/red-heart.png" alt="">
+                          <img src="images/recepies/salad.png" class="card-img-top p-3" alt="...">
+                          <div class="card-body">
+                            <h5 class="card-title">Fresh and Healthy Mixed Mayonnaise Salad</h5>
+                            <div class="d-flex pt-3">
+                              <div class=" py-1 me-4 rounded-pill">
+                                  <img src="images/Timer.png" alt="">
+                                  <span>30 Minutes</span>
+                              </div>
+                              <div class="py-1 me-4 rounded-pill">
+                                  <img src="images/ForkKnife.png" alt="">
+                                  <span>Chicken</span>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card h-100 py-3 gradient-bg border-0 rounded-5">
+                            <img class="react-icon" src="images/heart.png" alt="">
+                            <img src="images/recepies/chiken-meatball-.png" class="card-img-top p-3" alt="...">
+                          <div class="card-body">
+                            <h5 class="card-title">Chicken Meatballs with Cream <br> Cheese</h5>
+                            <div class="d-flex pt-3">
+                              <div class="me-4 rounded-pill">
+                                  <img src="images/Timer.png" alt="">
+                                  <span>30 Minutes</span>
+                              </div>
+                              <div class="me-4 rounded-pill">
+                                  <img src="images/ForkKnife.png" alt="">
+                                  <span>Chicken</span>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card border-0 rounded-5">
+                          <img src="images/recepies/Ads.png" class="card-img-top" alt="...">
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card h-100 py-3 gradient-bg border-0 rounded-5">
+                          <img class="react-icon" src="images/red-heart.png" alt="">
+                          <img src="images/recepies/pancake.png" class="card-img-top p-3" alt="...">
+                          <div class="card-body">
+                            <h5 class="card-title">Fruity Pancake with Orange & <br> Blueberry</h5>
+                            <div class="d-flex pt-3">
+                              <div class=" py-1 me-4 rounded-pill">
+                                  <img src="images/Timer.png" alt="">
+                                  <span>30 Minutes</span>
+                              </div>
+                              <div class="py-1 me-4 rounded-pill">
+                                  <img src="images/ForkKnife.png" alt="">
+                                  <span>Chicken</span>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card h-100 py-3 gradient-bg border-0 rounded-5">
+                          <img class="react-icon" src="images/heart.png" alt="">
+                          <img src="images/recepies/pot-chiken.png" class="card-img-top p-3" alt="...">
+                          <div class="card-body">
+                            <h5 class="card-title">The Best Easy One Pot Chicken <br> and Rice</h5>
+                            <div class="d-flex pt-3">
+                              <div class=" py-1 me-4 rounded-pill">
+                                  <img src="images/Timer.png" alt="">
+                                  <span>30 Minutes</span>
+                              </div>
+                              <div class="py-1 me-4 rounded-pill">
+                                  <img src="images/ForkKnife.png" alt="">
+                                  <span>Chicken</span>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card h-100 py-3 gradient-bg border-0 rounded-5">
+                          <img class="react-icon" src="images/heart.png" alt="">
+                          <img src="images/recepies/bacon-pasta.png" class="card-img-top p-3" alt="...">
+                          <div class="card-body">
+                            <h5 class="card-title">The Creamiest Creamy Chicken<br> and Bacon Pasta</h5>
+                            <div class="d-flex pt-3">
+                              <div class=" py-1 me-4 rounded-pill">
+                                  <img src="images/Timer.png" alt="">
+                                  <span>30 Minutes</span>
+                              </div>
+                              <div class="py-1 me-4 rounded-pill">
+                                  <img src="images/ForkKnife.png" alt="">
+                                  <span>Chicken</span>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                    </div>
+                  </div>
+            </section>
+
+            <!-- -------------------Card Area ends here----------------- -->
+        </section>
+
+        <!-- -----------------Simple and Tasty recipies area ends here---------------- -->
+
     </main>
     <!-- --------------Main section ends here--------------- -->
 
