chef section has been added

--- a/index.html
+++ b/index.html
@@ -105,10 +105,10 @@
                                         <p class="text-secondary">15 March 2022</p>
                                     </div>
                                 </div>
-                                <div class="">
+                                <div>
                                     <a class="btn btn-dark px-4 py-3" href="#">
                                         View Recipes
-                                        <i class="fa-solid fa-circle-play"></i>
+                                        <i class="fa-solid fa-circle-play ms-1"></i>
                                     </a>
                                 </div>
                             </div>
@@ -118,7 +118,7 @@
                         <div class="position-absolute mt-5 top-right-badge">
                             <img src="images/Badge.png" alt="">
                         </div>
-                        <img class="header-image" src="images/header-banner.png" alt="">
+                        <img class="header-image img-fluid" src="images/header-banner.png" alt="">
                     </div>
                 </div>
             </div>
@@ -191,6 +191,7 @@
                         </div>
                       </div>
                     </div>
+                    <!-- c -->
                     <div class="col">
                       <div class="card h-100 py-3 gradient-bg border-0 rounded-5">
                         <img class="react-icon" src="images/heart.png" alt="">
@@ -218,12 +219,12 @@
                           <h5 class="card-title">Strawberry Oatmeal Pancake <br> with Honey Syrup</h5>
                           <div class="d-flex pt-3">
                             <div class=" py-1 me-4 rounded-pill">
-                                <img src="images/Timer.png" alt="">
-                                <span>30 Minutes</span>
+                              <img src="images/Timer.png" alt="">
+                              <span>30 Minutes</span>
                             </div>
                             <div class="py-1 me-4 rounded-pill">
-                                <img src="images/ForkKnife.png" alt="">
-                                <span>Chicken</span>
+                              <img src="images/ForkKnife.png" alt="">
+                              <span>Chicken</span>
                             </div>
                           </div>
                         </div>
@@ -237,12 +238,12 @@
                             <h5 class="card-title">Fresh and Healthy Mixed Mayonnaise Salad</h5>
                             <div class="d-flex pt-3">
                               <div class=" py-1 me-4 rounded-pill">
-                                  <img src="images/Timer.png" alt="">
-                                  <span>30 Minutes</span>
+                                <img src="images/Timer.png" alt="">
+                                <span>30 Minutes</span>
                               </div>
                               <div class="py-1 me-4 rounded-pill">
-                                  <img src="images/ForkKnife.png" alt="">
-                                  <span>Chicken</span>
+                                <img src="images/ForkKnife.png" alt="">
+                                <span>Chicken</span>
                               </div>
                             </div>
                           </div>
@@ -250,18 +251,18 @@
                     </div>
                     <div class="col">
                         <div class="card h-100 py-3 gradient-bg border-0 rounded-5">
-                            <img class="react-icon" src="images/heart.png" alt="">
-                            <img src="images/recepies/chiken-meatball-.png" class="card-img-top p-3" alt="...">
+                          <img class="react-icon" src="images/heart.png" alt="">
+                          <img src="images/recepies/chiken-meatball-.png" class="card-img-top p-3" alt="...">
                           <div class="card-body">
                             <h5 class="card-title">Chicken Meatballs with Cream <br> Cheese</h5>
                             <div class="d-flex pt-3">
                               <div class="me-4 rounded-pill">
-                                  <img src="images/Timer.png" alt="">
-                                  <span>30 Minutes</span>
+                                <img src="images/Timer.png" alt="">
+                                <span>30 Minutes</span>
                               </div>
                               <div class="me-4 rounded-pill">
-                                  <img src="images/ForkKnife.png" alt="">
-                                  <span>Chicken</span>
+                                <img src="images/ForkKnife.png" alt="">
+                                <span>Chicken</span>
                               </div>
                             </div>
                           </div>
@@ -280,12 +281,12 @@
                             <h5 class="card-title">Fruity Pancake with Orange & <br> Blueberry</h5>
                             <div class="d-flex pt-3">
                               <div class=" py-1 me-4 rounded-pill">
-                                  <img src="images/Timer.png" alt="">
-                                  <span>30 Minutes</span>
+                                <img src="images/Timer.png" alt="">
+                                <span>30 Minutes</span>
                               </div>
                               <div class="py-1 me-4 rounded-pill">
-                                  <img src="images/ForkKnife.png" alt="">
-                                  <span>Chicken</span>
+                                <img src="images/ForkKnife.png" alt="">
+                                <span>Chicken</span>
                               </div>
                             </div>
                           </div>
@@ -299,12 +300,12 @@
                             <h5 class="card-title">The Best Easy One Pot Chicken <br> and Rice</h5>
                             <div class="d-flex pt-3">
                               <div class=" py-1 me-4 rounded-pill">
-                                  <img src="images/Timer.png" alt="">
-                                  <span>30 Minutes</span>
+                                <img src="images/Timer.png" alt="">
+                                <span>30 Minutes</span>
                               </div>
                               <div class="py-1 me-4 rounded-pill">
-                                  <img src="images/ForkKnife.png" alt="">
-                                  <span>Chicken</span>
+                                <img src="images/ForkKnife.png" alt="">
+                                <span>Chicken</span>
                               </div>
                             </div>
                           </div>
@@ -318,12 +319,12 @@
                             <h5 class="card-title">The Creamiest Creamy Chicken<br> and Bacon Pasta</h5>
                             <div class="d-flex pt-3">
                               <div class=" py-1 me-4 rounded-pill">
-                                  <img src="images/Timer.png" alt="">
-                                  <span>30 Minutes</span>
+                                <img src="images/Timer.png" alt="">
+                                <span>30 Minutes</span>
                               </div>
                               <div class="py-1 me-4 rounded-pill">
-                                  <img src="images/ForkKnife.png" alt="">
-                                  <span>Chicken</span>
+                                <img src="images/ForkKnife.png" alt="">
+                                <span>Chicken</span>
                               </div>
                             </div>
                           </div>
@@ -336,6 +337,25 @@
         </section>
 
         <!-- -----------------Simple and Tasty recipies area ends here---------------- -->
+
+        <!-- -------------------Chef section starts here------------------- -->
+        <section class="my-5">
+            <div class="row">
+                <div class="col-lg-6 d-flex align-items-center">
+                    <div>
+                        <h1>Everyone can be a<br>chef in their own kitchen</h1>
+                        <p class="my-4">Here are my head chef and he know how cook very well. And he tells to everyone, they can be chef of their own kitchen. No matter what type of recipe they can make.</p>
+                        <a class="btn btn-dark px-5 py-3" href="#">Read More</a>
+                    </div>
+                </div>
+                <div class="col-lg-6 py-5 my-3">
+                    <div class="chef-image-container rounded-5 ms-5">
+                      <img class="img-fluid chef-image" src="images/recepies/chef.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- -------------------Chef section ends here--------------------- -->
 
     </main>
     <!-- --------------Main section ends here--------------- -->
