--- a/index.html
+++ b/index.html
@@ -357,6 +357,99 @@
         </section>
         <!-- -------------------Chef section ends here--------------------- -->
 
+        <!-- -----------------Foodieland in Instagram section starts here---------------- -->
+        <section>
+          <!-- ---------Instagram header text--------- -->
+          <div class="text-center black-50">
+            <h1>Check out @foodieland on Instagram</h1>
+            <p>Check our all latest updates about food recipes in instagram. <br>Follow us on instagram for more updates.</p>
+          </div>
+          <!-- ----------Instagram post area-------- -->
+          <section>
+            <div class="row row-cols-1 row-cols-md-3 g-4">
+              <div class="col">
+                <div class="card h-100">
+                  <div class="d-flex justify-content-between m-2">
+                    <div class="d-flex ">
+                      <div>
+                        <img class="w-100" src="images/Oval.png" alt="">
+                      </div>
+                      <div>
+                        <h5>Foodieland.<i class="fa-solid fa-circle-check text-primary"></i></h5>
+                        <h6>Tokyo, Japan</h6>
+                      </div>
+                    </div>
+                    <div>
+                      <i class="fa-solid fa-ellipsis"></i>
+                    </div>
+                  </div>
+                  <img src="images/instagram/image-1.png" class="card-img-top" alt="...">
+                  <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                  </div>
+                  <div class="card-footer">
+                    <small class="text-muted">Last updated 3 mins ago</small>
+                  </div>
+                </div>
+              </div>
+              <div class="col">
+                <div class="card h-100">
+                  <div class="d-flex justify-content-between m-2">
+                    <div class="d-flex ">
+                      <div>
+                        <img class="w-100" src="images/Oval.png" alt="">
+                      </div>
+                      <div>
+                        <h5>Foodieland.<i class="fa-solid fa-circle-check text-primary"></i></h5>
+                        <h6>Tokyo, Japan</h6>
+                      </div>
+                    </div>
+                    <div>
+                      <i class="fa-solid fa-ellipsis"></i>
+                    </div>
+                  </div>
+                  <img src="images/instagram/image-2.png" class="card-img-top" alt="...">
+                  <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                  </div>
+                  <div class="card-footer">
+                    <small class="text-muted">Last updated 3 mins ago</small>
+                  </div>
+                </div>
+              </div>
+              <div class="col">
+                <div class="card h-100">
+                  <div class="d-flex justify-content-between m-2">
+                    <div class="d-flex ">
+                      <div>
+                        <img class="w-100" src="images/Oval.png" alt="">
+                      </div>
+                      <div>
+                        <h5>Foodieland.<i class="fa-solid fa-circle-check text-primary"></i></h5>
+                        <h6>Tokyo, Japan</h6>
+                      </div>
+                    </div>
+                    <div>
+                      <i class="fa-solid fa-ellipsis"></i>
+                    </div>
+                  </div>
+                  <img src="images/instagram/image-3.png" class="card-img-top" alt="...">
+                  <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                  </div>
+                  <div class="card-footer">
+                    <small class="text-muted">Last updated 3 mins ago</small>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </section>
+        </section>
+        <!-- -----------------Foodieland in Instagram section starts here---------------- -->
+
     </main>
     <!-- --------------Main section ends here--------------- -->
 
