--- a/index.html
+++ b/index.html
@@ -128,9 +128,10 @@
     <!-- ------------Header section ends here------------ -->
 
     <!-- --------------Main section starts here------------- -->
-    <main class="container">
+    <main>
         <!-- --------------Categories section starts here------------- -->
-        <section class="d-flex justify-content-between">
+        <section class="container">
+          <section class="d-flex justify-content-between">
             <h2 class="mt-0">Categories</h2>
             <a class="mt-1 py-2 px-3 rounded text-decoration-none text-dark fw-semibold categories" href="#">View All Categories</a>
         </section>
@@ -160,11 +161,12 @@
                 <h6 class="mt-5 ps-2">Chocholate</h6>
             </div>
         </section>
+        </section>
         <!-- --------------Categories section starts here------------- -->
 
         <!-- -----------------Simple and Tasty recipes area starts here---------------- -->
 
-        <section>
+        <section class="container">
             <h1 class="text-center">Simple and tasty recipes</h1>
             <p class="text-center fw-normal recipe-text">Here are the our all simple and tasty recipes. You can check it out and taste it. <br>We are providing the best recipes for cheap price.</p>
 
@@ -339,7 +341,7 @@
         <!-- -----------------Simple and Tasty recipies area ends here---------------- -->
 
         <!-- -------------------Chef section starts here------------------- -->
-        <section class="my-5">
+        <section class="my-5 container">
             <div class="row">
                 <div class="col-lg-6 d-flex align-items-center">
                     <div>
@@ -358,50 +360,68 @@
         <!-- -------------------Chef section ends here--------------------- -->
 
         <!-- -----------------Foodieland in Instagram section starts here---------------- -->
-        <section>
+        <section class="gradient-bg">
           <!-- ---------Instagram header text--------- -->
           <div class="text-center black-50">
             <h1>Check out @foodieland on Instagram</h1>
             <p>Check our all latest updates about food recipes in instagram. <br>Follow us on instagram for more updates.</p>
           </div>
           <!-- ----------Instagram post area-------- -->
-          <section>
-            <div class="row row-cols-1 row-cols-md-3 g-4">
+          <section class="py-5 container">
+            <div class="row row-cols-1 row-cols-md-4 g-4">
               <div class="col">
-                <div class="card h-100">
+                <div class="card h-100 border-0 py-0 px-0">
                   <div class="d-flex justify-content-between m-2">
-                    <div class="d-flex ">
-                      <div>
-                        <img class="w-100" src="images/Oval.png" alt="">
+                    <div class="d-flex">
+                      <div class="me-2">
+                        <img src="images/Oval.png" alt="">
                       </div>
                       <div>
-                        <h5>Foodieland.<i class="fa-solid fa-circle-check text-primary"></i></h5>
+                        <h5 class="mb-0">Foodieland.<i class="fa-solid fa-circle-check text-primary"></i></h5>
                         <h6>Tokyo, Japan</h6>
                       </div>
                     </div>
                     <div>
                       <i class="fa-solid fa-ellipsis"></i>
                     </div>
+                  </div>
+                  <div class="slide-container">
+                    <p class="slide-counter px-2 rounded-5 text-light">1/3</p>
                   </div>
                   <img src="images/instagram/image-1.png" class="card-img-top" alt="...">
                   <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                    <div class="d-flex justify-content-between">
+                      <div class="h4">
+                        <i class="fa-regular fa-heart"></i>
+                        <i class="fa-regular fa-comment"></i>
+                        <i class="fa-regular fa-paper-plane"></i>
+                      </div>
+                      <div class="slide-indicator">
+                        <i class="fa-solid fa-circle text-primary"></i>
+                        <i class="fa-regular fa-circle"></i>
+                        <i class="fa-regular fa-circle"></i>
+                      </div>
+                      <div class="fs-5">
+                        <i class="fa-regular fa-bookmark"></i>
+                      </div>
+                    </div>
+                    <p><img class="img-fluid me-2" src="images/profile.png" alt="">Liked by <span class="fw-bold">craig_love</span> and <span class="fw-bold">44,668</span></p>
+                    <p class="card-text"><span class="fw-bold">Foodieland.</span> The vegetables dishes need to have certain vitamin for those people</p>
                   </div>
-                  <div class="card-footer">
-                    <small class="text-muted">Last updated 3 mins ago</small>
+                  <div class="border-0 ps-3">
+                    <small class="text-secondary">19 September</small>
                   </div>
                 </div>
               </div>
               <div class="col">
-                <div class="card h-100">
+                <div class="card h-100 border-0 py-0 px-0">
                   <div class="d-flex justify-content-between m-2">
-                    <div class="d-flex ">
-                      <div>
-                        <img class="w-100" src="images/Oval.png" alt="">
+                    <div class="d-flex">
+                      <div class="me-2">
+                        <img src="images/Oval.png" alt="">
                       </div>
                       <div>
-                        <h5>Foodieland.<i class="fa-solid fa-circle-check text-primary"></i></h5>
+                        <h5 class="mb-0">Foodieland.<i class="fa-solid fa-circle-check text-primary"></i></h5>
                         <h6>Tokyo, Japan</h6>
                       </div>
                     </div>
@@ -409,25 +429,43 @@
                       <i class="fa-solid fa-ellipsis"></i>
                     </div>
                   </div>
-                  <img src="images/instagram/image-2.png" class="card-img-top" alt="...">
-                  <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                  <div class="slide-container">
+                    <p class="slide-counter px-2 rounded-5 text-light">1/3</p>
                   </div>
-                  <div class="card-footer">
-                    <small class="text-muted">Last updated 3 mins ago</small>
+                  <img src="images/instagram/image-1.png" class="card-img-top" alt="...">
+                  <div class="card-body">
+                    <div class="d-flex justify-content-between">
+                      <div class="h4">
+                        <i class="fa-regular fa-heart"></i>
+                        <i class="fa-regular fa-comment"></i>
+                        <i class="fa-regular fa-paper-plane"></i>
+                      </div>
+                      <div class="slide-indicator">
+                        <i class="fa-solid fa-circle text-primary"></i>
+                        <i class="fa-regular fa-circle"></i>
+                        <i class="fa-regular fa-circle"></i>
+                      </div>
+                      <div class="fs-5">
+                        <i class="fa-regular fa-bookmark"></i>
+                      </div>
+                    </div>
+                    <p><img class="img-fluid me-2" src="images/profile.png" alt="">Liked by <span class="fw-bold">craig_love</span> and <span class="fw-bold">44,668</span></p>
+                    <p class="card-text"><span class="fw-bold">Foodieland.</span> The vegetables dishes need to have certain vitamin for those people</p>
+                  </div>
+                  <div class="border-0 ps-3">
+                    <small class="text-secondary">19 September</small>
                   </div>
                 </div>
               </div>
               <div class="col">
-                <div class="card h-100">
+                <div class="card h-100 border-0 py-0 px-0">
                   <div class="d-flex justify-content-between m-2">
-                    <div class="d-flex ">
-                      <div>
-                        <img class="w-100" src="images/Oval.png" alt="">
+                    <div class="d-flex">
+                      <div class="me-2">
+                        <img src="images/Oval.png" alt="">
                       </div>
                       <div>
-                        <h5>Foodieland.<i class="fa-solid fa-circle-check text-primary"></i></h5>
+                        <h5 class="mb-0">Foodieland.<i class="fa-solid fa-circle-check text-primary"></i></h5>
                         <h6>Tokyo, Japan</h6>
                       </div>
                     </div>
@@ -435,19 +473,84 @@
                       <i class="fa-solid fa-ellipsis"></i>
                     </div>
                   </div>
-                  <img src="images/instagram/image-3.png" class="card-img-top" alt="...">
-                  <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                  <div class="slide-container">
+                    <p class="slide-counter px-2 rounded-5 text-light">1/3</p>
                   </div>
-                  <div class="card-footer">
-                    <small class="text-muted">Last updated 3 mins ago</small>
+                  <img src="images/instagram/image-1.png" class="card-img-top" alt="...">
+                  <div class="card-body">
+                    <div class="d-flex justify-content-between">
+                      <div class="h4">
+                        <i class="fa-regular fa-heart"></i>
+                        <i class="fa-regular fa-comment"></i>
+                        <i class="fa-regular fa-paper-plane"></i>
+                      </div>
+                      <div class="slide-indicator">
+                        <i class="fa-solid fa-circle text-primary"></i>
+                        <i class="fa-regular fa-circle"></i>
+                        <i class="fa-regular fa-circle"></i>
+                      </div>
+                      <div class="fs-5">
+                        <i class="fa-regular fa-bookmark"></i>
+                      </div>
+                    </div>
+                    <p><img class="img-fluid me-2" src="images/profile.png" alt="">Liked by <span class="fw-bold">craig_love</span> and <span class="fw-bold">44,668</span></p>
+                    <p class="card-text"><span class="fw-bold">Foodieland.</span> The vegetables dishes need to have certain vitamin for those people</p>
+                  </div>
+                  <div class="border-0 ps-3">
+                    <small class="text-secondary">19 September</small>
+                  </div>
+                </div>
+              </div>
+              <div class="col">
+                <div class="card h-100 border-0 py-0 px-0">
+                  <div class="d-flex justify-content-between m-2">
+                    <div class="d-flex">
+                      <div class="me-2">
+                        <img src="images/Oval.png" alt="">
+                      </div>
+                      <div>
+                        <h5 class="mb-0">Foodieland.<i class="fa-solid fa-circle-check text-primary"></i></h5>
+                        <h6>Tokyo, Japan</h6>
+                      </div>
+                    </div>
+                    <div>
+                      <i class="fa-solid fa-ellipsis"></i>
+                    </div>
+                  </div>
+                  <div class="slide-container">
+                    <p class="slide-counter px-2 rounded-5 text-light">1/3</p>
+                  </div>
+                  <img src="images/instagram/image-1.png" class="card-img-top" alt="...">
+                  <div class="card-body">
+                    <div class="d-flex justify-content-between">
+                      <div class="h4">
+                        <i class="fa-regular fa-heart"></i>
+                        <i class="fa-regular fa-comment"></i>
+                        <i class="fa-regular fa-paper-plane"></i>
+                      </div>
+                      <div class="slide-indicator">
+                        <i class="fa-solid fa-circle text-primary"></i>
+                        <i class="fa-regular fa-circle"></i>
+                        <i class="fa-regular fa-circle"></i>
+                      </div>
+                      <div class="fs-5">
+                        <i class="fa-regular fa-bookmark"></i>
+                      </div>
+                    </div>
+                    <p><img class="img-fluid me-2" src="images/profile.png" alt="">Liked by <span class="fw-bold">craig_love</span> and <span class="fw-bold">44,668</span></p>
+                    <p class="card-text"><span class="fw-bold">Foodieland.</span> The vegetables dishes need to have certain vitamin for those people</p>
+                  </div>
+                  <div class="border-0 ps-3">
+                    <small class="text-secondary">19 September</small>
                   </div>
                 </div>
               </div>
             </div>
           </section>
+          <div class="text-center py-5">
+            <a class="text-light bg-dark py-3 px-4 text-decoration-none overflow-hidden rounded-3" href="#">Visit Our Instagram <i class="fa-brands fa-instagram"></i></a>
         </section>
+          </div>
         <!-- -----------------Foodieland in Instagram section starts here---------------- -->
 
     </main>
