padding added for instagram post section footer

--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@
                     <p><img class="img-fluid me-2" src="images/profile.png" alt="">Liked by <span class="fw-bold">craig_love</span> and <span class="fw-bold">44,668</span></p>
                     <p class="card-text"><span class="fw-bold">Foodieland.</span> The vegetables dishes need to have certain vitamin for those people</p>
                   </div>
-                  <div class="border-0 ps-3">
+                  <div class="border-0 ps-3 pb-3">
                     <small class="text-secondary">19 September</small>
                   </div>
                 </div>
@@ -452,7 +452,7 @@
                     <p><img class="img-fluid me-2" src="images/profile.png" alt="">Liked by <span class="fw-bold">craig_love</span> and <span class="fw-bold">44,668</span></p>
                     <p class="card-text"><span class="fw-bold">Foodieland.</span> The vegetables dishes need to have certain vitamin for those people</p>
                   </div>
-                  <div class="border-0 ps-3">
+                  <div class="border-0 ps-3 pb-3">
                     <small class="text-secondary">19 September</small>
                   </div>
                 </div>
@@ -496,7 +496,7 @@
                     <p><img class="img-fluid me-2" src="images/profile.png" alt="">Liked by <span class="fw-bold">craig_love</span> and <span class="fw-bold">44,668</span></p>
                     <p class="card-text"><span class="fw-bold">Foodieland.</span> The vegetables dishes need to have certain vitamin for those people</p>
                   </div>
-                  <div class="border-0 ps-3">
+                  <div class="border-0 ps-3 pb-3">
                     <small class="text-secondary">19 September</small>
                   </div>
                 </div>
@@ -540,7 +540,7 @@
                     <p><img class="img-fluid me-2" src="images/profile.png" alt="">Liked by <span class="fw-bold">craig_love</span> and <span class="fw-bold">44,668</span></p>
                     <p class="card-text"><span class="fw-bold">Foodieland.</span> The vegetables dishes need to have certain vitamin for those people</p>
                   </div>
-                  <div class="border-0 ps-3">
+                  <div class="border-0 ps-3 pb-3">
                     <small class="text-secondary">19 September</small>
                   </div>
                 </div>
@@ -549,8 +549,9 @@
           </section>
           <div class="text-center py-5">
             <a class="text-light bg-dark py-3 px-4 text-decoration-none overflow-hidden rounded-3" href="#">Visit Our Instagram <i class="fa-brands fa-instagram"></i></a>
-        </section>
           </div>
+          </section>
+      
         <!-- -----------------Foodieland in Instagram section starts here---------------- -->
 
     </main>
