paragraph color of blog sections has updated

--- a/index.html
+++ b/index.html
@@ -167,11 +167,10 @@
         <!-- -----------------Simple and Tasty recipes area starts here---------------- -->
 
         <section class="container">
-            <h1 class="text-center">Simple and tasty recipes</h1>
-            <p class="text-center fw-normal recipe-text">Here are the our all simple and tasty recipes. You can check it out and taste it. <br>We are providing the best recipes for cheap price.</p>
+            <h1 class="text-center section-title">Simple and tasty recipes</h1>
+            <p class="text-center fw-normal custom-text">Here are the our all simple and tasty recipes. You can check it out and taste it. <br>We are providing the best recipes for cheap price.</p>
 
             <!-- -------------------Card Area starts here----------------- -->
-
             <section class="my-5">
                 <div class="row row-cols-1 row-cols-md-3 g-4">
                     <div class="col">
@@ -334,10 +333,8 @@
                     </div>
                   </div>
             </section>
-
             <!-- -------------------Card Area ends here----------------- -->
         </section>
-
         <!-- -----------------Simple and Tasty recipies area ends here---------------- -->
 
         <!-- -------------------Chef section starts here------------------- -->
@@ -345,8 +342,8 @@
             <div class="row">
                 <div class="col-lg-6 d-flex align-items-center">
                     <div>
-                        <h1>Everyone can be a<br>chef in their own kitchen</h1>
-                        <p class="my-4">Here are my head chef and he know how cook very well. And he tells to everyone, they can be chef of their own kitchen. No matter what type of recipe they can make.</p>
+                        <h1 class="section-title">Everyone can be a<br>chef in their own kitchen</h1>
+                        <p class="my-4 custom-text">Here are my head chef and he know how cook very well. And he tells to everyone, they can be chef of their own kitchen. No matter what type of recipe they can make.</p>
                         <a class="btn btn-dark px-5 py-3" href="#">Read More</a>
                     </div>
                 </div>
@@ -360,11 +357,11 @@
         <!-- -------------------Chef section ends here--------------------- -->
 
         <!-- -----------------Foodieland in Instagram section starts here---------------- -->
-        <section class="gradient-bg">
+        <section class="py-5 gradient-bg">
           <!-- ---------Instagram header text--------- -->
           <div class="text-center black-50">
-            <h1>Check out @foodieland on Instagram</h1>
-            <p>Check our all latest updates about food recipes in instagram. <br>Follow us on instagram for more updates.</p>
+            <h1 class="section-title">Check out @foodieland on Instagram</h1>
+            <p class="custom-text">Check our all latest updates about food recipes in instagram. <br>Follow us on instagram for more updates.</p>
           </div>
           <!-- ----------Instagram post area-------- -->
           <section class="py-5 container">
@@ -406,7 +403,7 @@
                       </div>
                     </div>
                     <p><img class="img-fluid me-2" src="images/profile.png" alt="">Liked by <span class="fw-bold">craig_love</span> and <span class="fw-bold">44,668</span></p>
-                    <p class="card-text"><span class="fw-bold">Foodieland.</span> The vegetables dishes need to have certain vitamin for those people</p>
+                    <p><span class="fw-bold">Foodieland.</span> The vegetables dishes need to have certain vitamin for those people</p>
                   </div>
                   <div class="border-0 ps-3 pb-3">
                     <small class="text-secondary">19 September</small>
@@ -551,8 +548,13 @@
             <a class="text-light bg-dark py-3 px-4 text-decoration-none overflow-hidden rounded-3" href="#">Visit Our Instagram <i class="fa-brands fa-instagram"></i></a>
           </div>
           </section>
-      
         <!-- -----------------Foodieland in Instagram section starts here---------------- -->
+
+        <!-------------------Delicious recipe area starts here-------------------->
+        <section>
+          <h1 class="h1">Try this delicious recipe <br> to make your day</h1>
+        </section>
+        <!-------------------Delicious recipe area starts here-------------------->
 
     </main>
     <!-- --------------Main section ends here--------------- -->
